[gd_scene load_steps=8 format=3 uid="uid://xp43kycr1t0d"]

[ext_resource type="Script" path="res://Scripts/Passives/Electric_Vine.gd" id="1_uisms"]
[ext_resource type="Texture2D" uid="uid://chglqg8rqld65" path="res://Sprites/Passives/ElectricVine.png" id="2_xml35"]
[ext_resource type="AudioStream" uid="uid://bcihod4qib4t" path="res://Sounds/ElectricZap.mp3" id="3_rn754"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bi43v"]
atlas = ExtResource("2_xml35")
region = Rect2(0, 0, 10, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywlhq"]
atlas = ExtResource("2_xml35")
region = Rect2(10, 0, 10, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_654bm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi43v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywlhq")
}],
"loop": true,
"name": &"shock",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4p8pl"]
radius = 25.0

[node name="Electric_Vine" type="Area2D"]
script = ExtResource("1_uisms")
original_damage = 2.0
despawn_time = 0.0
has_movement = false
collide_with_tiles = false
generated_by = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_654bm")
animation = &"shock"
autoplay = "shock"
frame_progress = 0.938779

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4p8pl")

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Shock_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rn754")
volume_db = 8.0
pitch_scale = 1.3
autoplay = true
bus = &"Sounds"

[connection signal="die" from="." to="." method="_on_die"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
[connection signal="finished" from="Shock_Sound" to="." method="_on_shock_sound_finished"]
